playground/notas_tests/valid/r4-04.hulk
function b() => 1;
function a() => b();
a();
