playground/notas_tests/invalid/syn-while-no-body.hulk
while (true) else 1;
